Prepare user service
